<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:id="@+id/dialog_layout"
    android:paddingRight="10dp"
    android:padding="@dimen/activity_horizontal_margin"
    >


    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        >
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:hint="@string/send_to"
            android:textColor="@color/def"
            android:ems="10"
            android:maxLength="50"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/colorAccent"
            />

    </android.support.design.widget.TextInputLayout>



    <android.support.design.widget.FloatingActionButton
        android:id="@+id/innerfab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabSize="mini"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:src="@drawable/action_send"
        android:layout_alignParentEnd="true"

        />



</RelativeLayout>